--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mock-console",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
   "main": "lib/mock-console.js",
   "description": "Node module for mocking the process.stdout variable.",
   "homepage": "https://github.com/craig-o/mock-console",
@@ -18,7 +17,10 @@
   "files": [
     "lib"
   ],
-  "keywords": [],
+  "publishConfig": {
+      "registry": "https://registry.npmjs.org/"
+  },
+  "keywords": [ "mock", "console", "process.stdio", "test" ],
   "devDependencies": {
     "jshint": "^2.5.11",
     "mocha": "^2.1.0",
